--- a/index.html
+++ b/index.html
@@ -8,10 +8,41 @@
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
+    <div class="cats">
+        <ul id="scene">
+            <li class="layer" data-depth="0.05"><img src="assets/img/cats2/cat_0012_Layer-0_0017_bg2.png"></li>
+            <li class="layer" data-depth="0.1"><img height="100%" src="assets/img/cats2/cat_0012_Layer-0_0016_1.png"></li>
+            <li class="layer" data-depth="0.2"><img height="100%" src="assets/img/cats2/cat_0012_Layer-0_0015_2.png"></li>
+            <li class="layer" data-depth="0.2"><img height="100%" src="assets/img/cats2/cat_0012_Layer-0_0014_3.png"></li>
+            <li class="layer" data-depth="0.2"><img height="100%" src="assets/img/cats2/cat_0012_Layer-0_0013_4.png"></li>
+            <li class="layer" data-depth="0.4"><img height="100%" src="assets/img/cats2/cat_0012_Layer-0_0012_5.png"></li>
+            <li class="layer" data-depth="0.4"><img height="100%" src="assets/img/cats2/cat_0012_Layer-0_0011_6.png"></li>
+            <li class="layer" data-depth="0.4"><img height="100%" src="assets/img/cats2/cat_0012_Layer-0_0010_7.png"></li>
+            <li class="layer" data-depth="0.6"><img height="100%" src="assets/img/cats2/cat_0012_Layer-0_0009_8.png"></li>
+            <li class="layer" data-depth="0.6"><img height="100%" src="assets/img/cats2/cat_0012_Layer-0_0008_9.png"></li>
+            <li class="layer" data-depth="0.6"><img height="100%" src="assets/img/cats2/cat_0012_Layer-0_0007_10.png"></li>
+            <li class="layer" data-depth="0.6"><img height="100%" src="assets/img/cats2/cat_0012_Layer-0_0006_11.png"></li>
+            <li class="layer" data-depth="0.8"><img height="100%" src="assets/img/cats2/cat_0012_Layer-0_0005_12.png"></li>
+            <li class="layer" data-depth="0.8"><img height="100%" src="assets/img/cats2/cat_0012_Layer-0_0004_13.png"></li>
+            <li class="layer" data-depth="0.8"><img height="100%" src="assets/img/cats2/cat_0012_Layer-0_0003_14.png"></li>
+            <span class="layer" data-depth="0" style="color: white">Helloo world</span>
+            <li class="layer" data-depth="1.2"><img height="100%" src="assets/img/cats2/cat_0012_Layer-0_0002_15.png"></li>
+            <li class="layer" data-depth="1.2"><img height="100%" src="assets/img/cats2/cat_0012_Layer-0_0001_16.png"></li>
+            <li class="layer" data-depth="1.2"><img height="100%" src="assets/img/cats2/cat_0012_Layer-0_0000_17.png"></li>
+        </ul>
+    </div>
+    <img id="info" src="assets/img/info.png" alt="info" height="35" width="35">
+    <div class="testing">
+
+    </div>
+
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <!-- <script src="assets/js/parallax.js" type="text/javascript"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
