--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="main__container d-flex">
             <section class="main__container__menu p-4">
-                <span>EPISODES</span>
+                <span class="mb-3 d-flex">EPISODES</span>
                 <ul id="episodes">
 
                 </ul>
