--- a/index.html
+++ b/index.html
@@ -42,11 +42,15 @@
             <section class="main__container__menu p-4">
                 <span class="mb-3 d-flex">EPISODES</span>
                 <ul id="episodes">
-
                 </ul>
             </section>
-            <section id="display" class="main__container__display">
+            <section id="display" class="main__container__display p-3">
+                <div class="display__main d-flex">
+                    <h4>This is the title of the episode</h4>
+                    <span>Here goes the airdate of the episode</span>
+                    <span>This is just the title of the episode</span>
 
+                </div>
             </section>
         </div>
         <img id="info" src="assets/img/info.png" alt="info" height="35" width="35">
