--- a/index.html
+++ b/index.html
@@ -48,7 +48,14 @@
                 <div class="display__main d-flex flex-column p-5">
                     <h4>A Rickle in Time</h4>
                     <span><span>December 2, 2013</span> | <span>S02E01</span></span>
-                    <span class="display__main--characters">Caharacters</span>
+                    <span class="display__main__title mt-5">Caharacters</span>
+                    <div class="display__main__characters d-flex justify-content-between flex-wrap">
+                        <div>
+                            <div class="display__main__characters--img">
+
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
             </section>
