finished design episode and character card

--- a/index.html
+++ b/index.html
@@ -54,9 +54,15 @@
                             <div class="display__main__characters--img">
                                 <img src="assets/img/5pr2d6fopii31.jpg" height="200"alt="">
                             </div>
-                            <div class="d-flex flex-column justify-content-center align-items-center p-3">
-                                <span class="character__name">Rick Sanchez</span>
-                                <div class="d-flex align-items-center character__info"><div class="status--green mr-2"></div><span><span class="character__status">Alive</span> - <span class="character__specie">Human</span></span></div>
+                            <div class="d-flex flex-column justify-content-between p-3">
+                                <div>
+                                    <span class="character__name">Rick Sanchez</span>
+                                    <div class="d-flex align-items-center character__info"><div class="status--green mr-2"></div><span><span class="character__status">Alive</span> - <span class="character__specie">Human</span></span></div>
+                                </div>
+                                <div class="character__lastLocation d-flex flex-column">
+                                    <span>Last known location:</span>
+                                    <span>Earth (Replacement Dismension)</span>
+                                </div>
                             </div>
                         </div>
                     </div>
