characters draw  in episode implementation

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </section>
             <section id="display" class="main__container__display p-5">
                 <div class="display__main d-flex flex-column p-5">
-                    <div class="display__main--episode d-flex flex-column">
+                    <!-- <div class="display__main--episode d-flex flex-column">
                         <h4>A Rickle in Time</h4>
                         <span><span>December 2, 2013</span> | <span>S02E01</span></span>
                         <span class="display__main__title mt-5 mb-3">Caharacters</span>
@@ -67,7 +67,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                 </div>
             </section>
