--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                 <li class="layer" data-depth="1.2"><img height="100%" src="assets/img/cats2/cat_0012_Layer-0_0000_17.png"></li>
             </ul>
         </div>
-        <div class="main__container d-flex">
+        <div class="main__container d-flex flex-column flex-sm-row">
             <section class="main__container__menu p-4">
-                <span class="mb-3 d-flex">EPISODES</span>
-                <ul id="episodes">
+                <span class="mb-3 d-flex justify-content-center justify-content-sm-start">EPISODES</span>
+                <ul id="episodes" class="d-flex flex-column align-items-center align-items-sm-start">
                 </ul>
             </section>
             <section id="display" class="main__container__display p-5">
