--- a/index.html
+++ b/index.html
@@ -44,29 +44,20 @@
                 <ul id="episodes" class="d-flex flex-column align-items-center align-items-sm-start">
                 </ul>
             </section>
-            <!-- <section class="dropdown main__container__menu-sm p-4 d-block d-sm-none">
-                <button class="mb-3 d-flex justify-content-center" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">EPISODES</button>
-                <ul id="episodes-sm" class="d-flex flex-column align-items-center align-items-sm-start dropdown-menu" aria-labelledby="dropdownMenuButton">
-                </ul>
-            </section> -->
-            <section class="dropdown main__container__menu-sm d-block d-sm-none">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Dropdown button
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-              </section>
+            <nav class="main__container__menu-sm p-4 d-block d-sm-none">
+                <button class="navbar-toggler mb-3 d-flex justify-content-center" data-toggle="collapse" data-target="#collapseMenu" aria-controls="collapseMenu" aria-expanded="false" aria-label="Toggle navigation">EPISODES</button>
+            </nav>
             <section id="display" class="main__container__display p-3 p-sm-5">
                 <div class="display__main d-flex flex-column p-5">
-
 
                 </div>
             </section>
         </div>
         <img id="info" src="assets/img/info.png" alt="info" height="35" width="35">
+    </div>
+    <div id="collapseMenu" class="collapse">
+        <ul id="episodes-sm" class="py-2 d-flex flex-column align-items-center align-items-sm-start d-block d-sm-none ">
+        </ul>
     </div>
 
 
