--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- <script src="assets/js/parallax.js" type="text/javascript"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
+    <script src="assets/js/location.js"></script>
     <script src="assets/js/character.js"></script>
     <script src="assets/js/episode.js"></script>
     <script src="assets/js/script.js"></script>
