--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
             </ul>
         </div>
         <div class="main__container d-flex flex-column flex-sm-row">
-            <nav class="main__container__menu p-4 d-none d-sm-block">
+            <nav class="main__container__menu p-4 d-none d-md-block">
                 <span class="mb-3 d-flex justify-content-start">EPISODES</span>
                 <ul id="episodes" class="d-flex flex-column align-items-center align-items-sm-start">
                 </ul>
             </nav>
-            <nav class="main__container__menu-sm p-4 d-flex flex-column align-items-center d-sm-none">
+            <nav class="main__container__menu-sm p-4 d-flex flex-column align-items-center d-md-none">
                 <button class="navbar-toggler mb-2 d-flex justify-content-center" data-toggle="collapse" data-target="#collapseMenu" aria-controls="collapseMenu" aria-expanded="false" aria-label="Toggle navigation">EPISODES</button>
                 <div id="collapseMenu" class="collapse">
                     <ul id="episodes-sm" class="py-2 d-flex flex-column align-items-center">
                     </ul>
                 </div>
             </nav>
-            <section id="display" class="main__container__display p-3 p-sm-5">
+            <section id="display" class="main__container__display p-3 p-md-5">
                 <div class="display__main d-flex flex-column p-5">
 
                 </div>
