--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </nav>
             <section id="display" class="main__container__display p-3 p-md-5">
                 <div class="display__main d-flex flex-column p-5">
-                    <img src="assets/img/portal.gif" class="m-auto" height="600" width="600">
+                    <img src="assets/img/portal.gif" class="m-auto display__main__portal" height="450" width="450">
                 </div>
             </section>
         </div>
