remove footer button

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 </div>
             </section>
         </div>
-        <img id="info" src="assets/img/info.png" alt="info" height="35" width="35">
+        <!-- <img id="info" src="assets/img/info.png" alt="info" height="35" width="35"> -->
     </div>
 
 
